# pulsar-preds

./: pyproject.toml  test.ipynb
data/: pulsar_data.csv
notebooks/: report.ipynb  test.ipynb
src/: model.py  preprocessor.py
